typesafe-builders/tests/ui/reject/field_attr_unknown.rs
use typesafe_builders::prelude::*;

#[derive(Builder)]
struct Struct {
	#[builder(yikes)]
	x: u8,
}

fn main() { }
